--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7f5ae">  <td>20/08/17 09:59:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestCase.test()[pri:0, instance:FirstTestCase@2b98378d]">test</td> 
-  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:23</td>   <td>0</td> <td title="&gt;&gt;FirstTestCase.beforesuite()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&gt;&gt;beforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:23</td>   <td>34</td> <td>&nbsp;</td><td title="&gt;&gt;FirstTestCase.beforeTest()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:23</td>   <td>53</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirstTestCase.beforeclass()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:23</td>   <td>90</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirstTestCase.openBrowser()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:30</td>   <td>7243</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestCase.c()[pri:1, instance:Testpackage.FirstTestCase@d2cc05a]">c</td> 
+  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:34</td>   <td>10867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FirstTestCase.tearDown()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:38</td>   <td>14854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirstTestCase.openBrowser()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:42</td>   <td>18674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestCase.b()[pri:3, instance:Testpackage.FirstTestCase@d2cc05a]">b</td> 
+  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:46</td>   <td>22556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FirstTestCase.tearDown()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:50</td>   <td>26713</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FirstTestCase.Afterclass()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&lt;&lt;Afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:50</td>   <td>26714</td> <td>&nbsp;</td><td title="&lt;&lt;FirstTestCase.AfterTest()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&lt;&lt;AfterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:50</td>   <td>26785</td> <td title="&lt;&lt;FirstTestCase.Aftersuite()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&lt;&lt;Aftersuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
 </table>
