--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:50</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;FirstTestCase.AfterTest()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&lt;&lt;AfterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:50</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FirstTestCase.Afterclass()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&lt;&lt;Afterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:50</td>   <td>71</td> <td title="&lt;&lt;FirstTestCase.Aftersuite()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&lt;&lt;Aftersuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:42</td>   <td>-8040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestCase.b()[pri:3, instance:Testpackage.FirstTestCase@d2cc05a]">b</td> 
-  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:23</td>   <td>-26680</td> <td>&nbsp;</td><td title="&gt;&gt;FirstTestCase.beforeTest()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:23</td>   <td>-26661</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirstTestCase.beforeclass()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:23</td>   <td>-26714</td> <td title="&gt;&gt;FirstTestCase.beforesuite()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&gt;&gt;beforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:30</td>   <td>-19471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FirstTestCase.c()[pri:1, instance:Testpackage.FirstTestCase@d2cc05a]">c</td> 
-  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:23</td>   <td>-26624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirstTestCase.openBrowser()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:38</td>   <td>-11860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FirstTestCase.openBrowser()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:34</td>   <td>-15847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FirstTestCase.tearDown()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
-<tr bgcolor="b7f5ae">  <td>20/08/18 09:44:46</td>   <td>-4158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FirstTestCase.tearDown()[pri:0, instance:Testpackage.FirstTestCase@d2cc05a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@892529689</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>20/08/19 09:23:16</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.AfterTest()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&lt;&lt;AfterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>20/08/19 09:23:16</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.Afterclass()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&lt;&lt;Afterclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>20/08/19 09:23:16</td>   <td>246</td> <td title="&lt;&lt;BaseTest.Aftersuite()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&lt;&lt;Aftersuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>20/08/19 09:23:08</td>   <td>-7818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.a()[pri:2, instance:Testpackage.TestCase1@4f933fd1]">a</td> 
+  <td>main@1757676444</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>20/08/19 09:22:58</td>   <td>-17998</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>20/08/19 09:22:58</td>   <td>-17933</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeclass()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&gt;&gt;beforeclass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>20/08/19 09:22:58</td>   <td>-18063</td> <td title="&gt;&gt;BaseTest.beforesuite()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&gt;&gt;beforesuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>20/08/19 09:22:58</td>   <td>-17732</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>20/08/19 09:23:12</td>   <td>-4043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Testpackage.TestCase1@4f933fd1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1757676444</td>   <td></td> </tr>
 </table>
