--- a/test-output/old/Suite-1/classes.html
+++ b/test-output/old/Suite-1/classes.html
@@ -4,14 +4,33 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Testpackage.TestCase1</td>
+<td>Testpackage2.TestCase1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>p</td>
+<td>smokeTest </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>a</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>q</td>
+<td>RegresstionTesting </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>r</td>
+<td>smokeTest RegresstionTesting </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>x</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
